Some mixed cleanup changes
* BDD all have a single empty line at the end
* BDD test file names use hyphens, not underscores
* Order BDD test directories by name in CMake script
* More consistent formatting and spelling in Github actions/workflow files

--- a/.github/actions/build-and-test/action.yml
+++ b/.github/actions/build-and-test/action.yml
@@ -1,4 +1,4 @@
-name: 'Build and test osm2pgsq'
+name: Build and test osm2pgsq
 
 inputs:
   test-wrapper:
@@ -7,7 +7,7 @@ inputs:
     default: pg_virtualenv
 
 runs:
-    using: "composite"
+    using: composite
 
     steps:
       - name: create build directory
