--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -115,7 +115,7 @@ endif()
 find_program(BEHAVE_BIN NAMES behave)
 
 if (BEHAVE_BIN)
-    foreach(BDD_TEST IN ITEMS regression flex command-line)
+    foreach(BDD_TEST IN ITEMS command-line flex regression)
         add_test(NAME bdd-${BDD_TEST}
                  COMMAND behave -DBINARY=$<TARGET_FILE:osm2pgsql> ${BDD_TEST}
                  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bdd)
