Add polygon tests, fix area() function

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -46,6 +46,7 @@ set_test(test-geom-box LABELS NoDB)
 set_test(test-geom-lines LABELS NoDB)
 set_test(test-geom-null LABELS NoDB)
 set_test(test-geom-points LABELS NoDB)
+set_test(test-geom-polygons LABELS NoDB)
 set_test(test-middle)
 set_test(test-node-locations LABELS NoDB)
 set_test(test-options-database LABELS NoDB)
