Add tests for multipoint and multipolygon geometries

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -46,6 +46,8 @@ set_test(test-geom-box LABELS NoDB)
 set_test(test-geom-collections LABELS NoDB)
 set_test(test-geom-linestrings LABELS NoDB)
 set_test(test-geom-multilinestrings LABELS NoDB)
+set_test(test-geom-multipoints LABELS NoDB)
+set_test(test-geom-multipolygons LABELS NoDB)
 set_test(test-geom-null LABELS NoDB)
 set_test(test-geom-points LABELS NoDB)
 set_test(test-geom-polygons LABELS NoDB)
