Split up test-geom-lines.cpp
Into files with tests for linestrings and multilinestrings, respectively.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -43,8 +43,9 @@ set_test(test-db-copy-mgr)
 set_test(test-domain-matcher LABELS NoDB)
 set_test(test-expire-tiles LABELS NoDB)
 set_test(test-geom-box LABELS NoDB)
-set_test(test-geom-lines LABELS NoDB)
 set_test(test-geom-collections LABELS NoDB)
+set_test(test-geom-linestrings LABELS NoDB)
+set_test(test-geom-multilinestrings LABELS NoDB)
 set_test(test-geom-null LABELS NoDB)
 set_test(test-geom-points LABELS NoDB)
 set_test(test-geom-polygons LABELS NoDB)
