--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -51,6 +51,7 @@ set_test(test-geom-multipolygons LABELS NoDB)
 set_test(test-geom-null LABELS NoDB)
 set_test(test-geom-points LABELS NoDB)
 set_test(test-geom-polygons LABELS NoDB)
+set_test(test-geom-transform LABELS NoDB)
 set_test(test-middle)
 set_test(test-node-locations LABELS NoDB)
 set_test(test-options-database LABELS NoDB)
