Add pole_of_inaccessibility() function in Lua for polygons
Implementation of the "polylabel" algorithm for finding the "pole of
inaccessibility" or center of the maximum inscribed circle of a polygon.
This is accessible from Lua as the pole_of_inaccessibility() function.

The current implementation is only defined for polygons, because it is
unclear how it should behave for other types of geometries. We can
extend this later if needed.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ target_sources(osm2pgsql_lib PRIVATE
   geom-box.cpp
   geom-from-osm.cpp
   geom-functions.cpp
+  geom-pole-of-inaccessibility.cpp
   input.cpp
   logging.cpp
   middle.cpp
