--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -53,6 +53,7 @@ set_test(test-geom-null LABELS NoDB)
 set_test(test-geom-output LABELS NoDB)
 set_test(test-geom-points LABELS NoDB)
 set_test(test-geom-polygons LABELS NoDB)
+set_test(test-geom-pole-of-inaccessibility LABELS NoDB)
 set_test(test-geom-transform LABELS NoDB)
 set_test(test-json-writer LABELS NoDB)
 set_test(test-middle)
