--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -49,6 +49,7 @@ set_test(test-geom-multilinestrings LABELS NoDB)
 set_test(test-geom-multipoints LABELS NoDB)
 set_test(test-geom-multipolygons LABELS NoDB)
 set_test(test-geom-null LABELS NoDB)
+set_test(test-geom-output LABELS NoDB)
 set_test(test-geom-points LABELS NoDB)
 set_test(test-geom-polygons LABELS NoDB)
 set_test(test-geom-transform LABELS NoDB)
