--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -337,6 +337,7 @@ include(GNUInstallDirs)
 if (ENABLE_INSTALL)
     install(TARGETS osm2pgsql DESTINATION bin)
     install(FILES default.style empty.style DESTINATION share/osm2pgsql)
-    install(CODE "set(OSM2PGSQL_BINDIR ${CMAKE_INSTALL_FULL_BINDIR})
-                  configure_file(${PROJECT_SOURCE_DIR}/scripts/osm2pgsql-replication ${CMAKE_INSTALL_FULL_BINDIR}/osm2pgsql-replication)")
+    set(OSM2PGSQL_BINDIR ${CMAKE_INSTALL_FULL_BINDIR})
+    configure_file(${PROJECT_SOURCE_DIR}/scripts/osm2pgsql-replication ${PROJECT_BINARY_DIR}/osm2pgsql-replication)
+    install(PROGRAMS ${PROJECT_BINARY_DIR}/osm2pgsql-replication DESTINATION bin)
 endif()
