Implement and use our own JSON writer
This isn't much work and we can get rid of rapidjson for which there
hasn't been a release in many years and which shows problems in
clang-tidy and with UB sanitizer.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -54,6 +54,7 @@ set_test(test-geom-output LABELS NoDB)
 set_test(test-geom-points LABELS NoDB)
 set_test(test-geom-polygons LABELS NoDB)
 set_test(test-geom-transform LABELS NoDB)
+set_test(test-json-writer LABELS NoDB)
 set_test(test-middle)
 set_test(test-node-locations LABELS NoDB)
 set_test(test-options-database LABELS NoDB)
