Github action: Add Ubuntu 22.04 builds

--- a/.github/actions/build-and-test/action.yml
+++ b/.github/actions/build-and-test/action.yml
@@ -35,7 +35,7 @@ runs:
         shell: bash
         working-directory: build
         env:
-          CXXFLAGS: -pedantic -Wextra -Werror
+          CXXFLAGS: -pedantic -Wextra ${{ env.EXTRA_FLAGS }} -Werror
 
       - name: build
         run: make -j3 all man
