Move functions to parse Lua index definitions into their own file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -50,6 +50,7 @@ if (WITH_LUA)
         flex-table.cpp
         flex-table-column.cpp
         flex-lua-geom.cpp
+        flex-lua-index.cpp
         geom-transform.cpp
         lua-utils.cpp
         output-flex.cpp
