Introduce new Lua helper fuctions for working with Lua arrays
New functions luaX_is_empty_table(), luaX_is_array() and luaX_for_each()
take some of the boilerplate out of working with Lua arrays.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -85,6 +85,7 @@ set_test(test-wkb LABELS NoDB)
 # these tests require LUA support
 if (WITH_LUA)
     set_test(test-flex-indexes)
+    set_test(test-lua-utils)
     set_test(test-output-flex)
     set_test(test-output-flex-multi-input)
     set_test(test-output-flex-nodes)
