Fix for UTF-8 characters in JSON
See #1893

--- a/.github/actions/win-test/action.yml
+++ b/.github/actions/win-test/action.yml
@@ -6,6 +6,8 @@ runs:
   steps:
     - name: Test
       run: ctest --output-on-failure -C Release
+      env:
+        PYTHONUTF8: 1
       shell: bash
       working-directory: build
 
