Move Lua code for setting up tables into their own file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -52,6 +52,7 @@ if (WITH_LUA)
         flex-table-column.cpp
         flex-lua-geom.cpp
         flex-lua-index.cpp
+        flex-lua-table.cpp
         flex-write.cpp
         geom-transform.cpp
         lua-utils.cpp
