--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -367,7 +367,9 @@ jobs:
         with:
           path: |
             C:/vcpkg_binary_cache
-          key: vcpkg-binary-cache-${{ matrix.os }}
+          key: vcpkg-binary-cache-${{ matrix.os }}-${{ github.run_id }}
+          restore-keys: |
+            vcpkg-binary-cache-${{ matrix.os }}
       - uses: actions/cache@v3
         with:
           path: |
