Add "install-gen" target that installs osm2pgsql-gen and its man page

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -365,4 +365,8 @@ if (ENABLE_INSTALL)
     install(TARGETS osm2pgsql DESTINATION bin)
     install(FILES default.style empty.style DESTINATION share/osm2pgsql)
     install(PROGRAMS scripts/osm2pgsql-replication DESTINATION bin)
+    if (BUILD_GEN)
+        install(TARGETS osm2pgsql-gen COMPONENT gen EXCLUDE_FROM_ALL DESTINATION bin)
+        add_custom_target(install-gen cmake --install ${CMAKE_BINARY_DIR} --component gen)
+    endif()
 endif()
