--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -64,4 +64,7 @@ endif()
 if(ENABLE_INSTALL)
     install(FILES osm2pgsql.1 DESTINATION share/man/man1)
     install(FILES osm2pgsql-replication.1 DESTINATION share/man/man1)
+    if (BUILD_GEN)
+        install(FILES osm2pgsql-gen.1 COMPONENT gen EXCLUDE_FROM_ALL DESTINATION share/man/man1)
+    endif()
 endif()
