Split command line parser code from options
Removes all code from the options_t class and makes it into a simple
struct. All code parsing and checking the command line is now in
command-line-parser.hpp/cpp.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@
 add_library(osm2pgsql_lib STATIC)
 
 target_sources(osm2pgsql_lib PRIVATE
+  command-line-parser.cpp
   db-copy.cpp
   debug-output.cpp
   dependency-manager.cpp
@@ -20,7 +21,6 @@ target_sources(osm2pgsql_lib PRIVATE
   middle-ram.cpp
   node-locations.cpp
   node-persistent-cache.cpp
-  options.cpp
   ordered-index.cpp
   osmdata.cpp
   output-gazetteer.cpp
