--- a/.github/actions/win-install/action.yml
+++ b/.github/actions/win-install/action.yml
@@ -5,8 +5,19 @@ runs:
 
   steps:
     - name: Install packages
-      run: vcpkg install cimg:x64-windows bzip2:x64-windows expat:x64-windows zlib:x64-windows proj4:x64-windows boost-geometry:x64-windows boost-system:x64-windows boost-filesystem:x64-windows boost-property-tree:x64-windows lua:x64-windows libpq:x64-windows
+      run: |
+        vcpkg install \
+          boost-filesystem:x64-windows \
+          boost-geometry:x64-windows \
+          boost-property-tree:x64-windows \
+          boost-system:x64-windows \
+          bzip2:x64-windows \
+          cimg:x64-windows \
+          expat:x64-windows \
+          lua:x64-windows libpq:x64-windows \
+          proj4:x64-windows \
+          zlib:x64-windows
       shell: bash
-    - name: Install psycopg2 and beahve
+    - name: Install psycopg2 and behave
       run: python -m pip install psycopg2 behave
       shell: bash
