--- a/.github/actions/win-install/action.yml
+++ b/.github/actions/win-install/action.yml
@@ -19,5 +19,5 @@ runs:
           zlib:x64-windows
       shell: bash
     - name: Install psycopg2 and behave
-      run: python -m pip install psycopg2 behave
+      run: python -m pip install psycopg2 behave osmium
       shell: bash
