CMake config: More modern way of defining the C++ version to use
We declare that we need to use C++17, but this can be overridden on
the cmake command line with "-DCMAKE_CXX_STANDARD=20" or so.

Fixes #1010.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,10 @@
 
 add_library(osm2pgsql_lib STATIC)
 
+# Set the minimum required C++ version for the library and hence for all
+# binaries that use it.
+target_compile_features(osm2pgsql_lib PUBLIC cxx_std_17)
+
 target_sources(osm2pgsql_lib PRIVATE
   db-copy.cpp
   debug-output.cpp
